k8s/infrastructure/network/adguard.yaml
# 1. Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: network
---
# 3. The Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.44
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: web
            - containerPort: 3000
              name: setup
          volumeMounts:
            - mountPath: /opt/adguardhome/work
              name: data
              subPath: work
            - mountPath: /opt/adguardhome/conf
              name: data
              subPath: conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-data
---
# 4. The MetalLB Static IP Service
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: network
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.240 
  externalTrafficPolicy: Local   # Preserves the real IP of devices in the logs
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: setup
      port: 3000
      targetPort: 80
      protocol: TCP
  selector:
    app: adguard
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ui
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.shasame.fr`)
      kind: Rule
      services:
        - name: adguard-home
          port: 80
      middlewares:
        - name: auth-forward
          namespace: auth
  tls:
    certResolver: default
